--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "vionadine",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"tsc"
   },
   "repository": {
     "type": "git",
@@ -17,14 +18,11 @@
   },
   "homepage": "https://github.com/VickyFrenzy/Vionadine#readme",
   "dependencies": {
-    "@discordjs/opus": "^0.10.0",
-    "@discordjs/voice": "^0.18.0",
     "discord.js": "^14.18.0",
-    "dotenv": "^16.4.7",
-    "libsodium-wrappers": "^0.7.15"
+    "dotenv": "^16.4.7"
   },
   "devDependencies": {
-    "@eslint/js": "^9.24.0",
-    "eslint": "^9.24.0"
+    "eslint": "^9.24.0",
+    "typescript": "^5.8.3"
   }
 }
